--- a/src/styles.css
+++ b/src/styles.css
@@ -6,16 +6,16 @@
     color: rgb(227, 10, 10);
 }
 
-#logo {
-    font-size: 1.5em;
-}
-
-#connection {
+.connection {
     margin-right: 0.5em;
     margin-left: 0.5em;
 }
 
-#throughput {
+.logo {
+    font-size: 1.5em;
+}
+
+.throughput {
     font-family: monospace;
 }
 
